# ErrUt

./: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README  README.md  autogen.sh  builddist.sh  configure.in
cmake/: ErrUtConfig.cmake.in
doc/: Makefile.am  errut.h  mainpage.h
include/: Makefile.am
include/errut/: Makefile.am  errorbase.h
sphinxdoc/source/: conf.py
src/: booltype.h  errorbase.h  errorbase.h.in  errutcode.cpp  errutconfig.h.in
